Fix client form, show required input and error message, fix overflow on Client list

--- a/src/app/home/clients/clientForm/clientForm.module.scss
+++ b/src/app/home/clients/clientForm/clientForm.module.scss
@@ -106,7 +106,7 @@
   
   font-size: 16px;
 
-  margin-bottom: 20px;
+  margin: 10px 0 20px;
   
   &:hover {
     opacity: 1;
