--- a/src/components/business_settings/tabs.module.scss
+++ b/src/components/business_settings/tabs.module.scss
@@ -58,6 +58,8 @@
   width: 100%;
   height: 100%;
 
+  overflow-y: auto;
+
   display: flex;
   flex-direction: column;
 
